<resources>
    <string name="app_name">ShiokorityPay</string>
    <string name="title_home">Home</string>
    <string name="title_payment">Payment</string>
    <string name="title_history">Transaction History</string>
    <string name="title_profile">Profile</string>
    <string name="title_pay">Pay</string>
    <string name="text_username">Username</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_sign_up">Do not have an account? Sign Up</string>
    <string name="text_login_to_your_account">Login to your Account</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="toggle_password_visibility">Show Password</string>
    <string name="button_next">Next</string>
    <string name="tab_layout_description">describe onboarding content</string>
    <string name="create_account_text">Create your Account</string>
    <string name="text_transaction_history">Transaction History</string>
    <string name="text_search">Search</string>
    <string name="text_filter_transaction_history">filter transaction history</string>
    <string name="no_transactions_found">No Transactions Found</string>
    <string name="transactions_will_appear_here">Your transactions will appear here</string>
</resources>