<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_payment"
        android:icon="@drawable/ic_store_black_24dp"
        android:title="@string/title_payment"/>

    <item
        android:id="@+id/navigation_pay"
        android:icon="@drawable/ic_scan_black_32dp"
        android:title="@string/title_pay"/>

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_clock_black_test_24dp"
        android:title="@string/title_history"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/title_profile"/>
</menu>